--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api-pick-up-packages",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type":"commonjs",
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/index.js dotenv_config_path=env/.env.local"
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/jholgin/api-pick-up-packages#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
+    "mongoose": "^6.6.4",
+    "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
